<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <RelativeLayout
        android:id="@+id/upper_bg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/Lavender">

        <ImageView
            android:id="@+id/upper_imageView"
            android:layout_width="wrap_content"
            android:layout_height="146dp"
            android:layout_marginStart="230sp"
            android:layout_marginBottom="130sp"
            android:contentDescription="@string/man_and_woman"
            android:src="@drawable/upper_img" />

        <TextView
            android:id="@+id/first_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/first_upper_text"
            android:textAlignment="textStart"
            android:textColor="@color/Orchid"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="160sp"
            />

        <TextView
            android:id="@+id/second_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_textView"
            android:fontFamily="cursive"
            android:text="@string/second_upper_text"
            android:textAlignment="textStart"
            android:textColor="@color/Orchid"
            android:textSize="18sp"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="30sp"
            />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_below="@id/upper_bg"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="-90dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/zodiac_sign_woman_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:layout_marginTop="15sp"
            android:text="@string/zodiac_sign_woman"
            android:textColor="@color/Pink"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/zodiac_sign_woman_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:hint="@string/zodiac_sign_editText"
            android:minHeight="48dp"/>

        <TextView
            android:id="@+id/zodiac_sign_man_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:layout_marginTop="10sp"
            android:text="@string/zodiac_sign_man"
            android:textColor="@color/SkyBlue"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/zodiac_sign_man_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:hint="@string/zodiac_sign_editText"
            android:minHeight="48dp"/>
        <Button
            android:id="@+id/calculate_compatibility_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Orchid"
            android:text="@string/view_compatibility"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="15sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form"
        android:layout_marginHorizontal="60sp"
        android:layout_marginVertical="20sp"
        android:contentDescription="@string/imgText"
        app:srcCompat="@drawable/img" />
</RelativeLayout>