<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CompatibilityActivity"
    android:orientation="vertical"
    android:background="@color/Lavender">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:contentDescription="@string/man_and_woman"
        android:src="@drawable/upper_img" />
<TextView
    android:id="@+id/compatibility_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginHorizontal="20sp"
    android:text="@string/compatibility"
    android:textAlignment="center"
    android:textStyle="bold"
    android:paddingBottom="10sp"
    android:textColor="@color/black"
    android:textSize="22sp"/>
    <TextView
        android:id="@+id/compatibility_zodiacWoman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginHorizontal="20sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:paddingBottom="10sp"
        android:textColor="@color/Pink"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/compatibility_zodiacMan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginHorizontal="20sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:paddingBottom="10sp"
        android:textColor="@color/SkyBlue"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/compatibility_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginHorizontal="20sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:paddingBottom="10sp"
        android:textColor="@color/Orchid"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="20sp"
        android:backgroundTint="@color/Orchid"
        android:text="@string/back"
        android:textSize="22sp"/>
</LinearLayout>
